# cockpit

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  design.md  operations.md  prompts.md  roadmap.md
docs/reference/: firefox-tabs.md  hardware.md  landscape.md  selfhosted.md  session-library.md
launchd/: cockpit  install.sh  local.cockpit.daemon.plist.template  uninstall.sh
src/cockpit/: __init__.py  __main__.py  actions.py  attention.py  axread.py  claude_code.py  claude_config.py  daemon.py  dashboard.py  doctor.py  listener.py  osint.py  palette.py  registry.py  sessions.py  statusline.py
src/deck/: README.md  __init__.py  anim.py  app.py  color.py  components.py  demo.py  hwtest.py  lifecycle.py  render.py  showcase.py  soak.py  surface.py
src/fleet/: __init__.py  attention.py  listener.py  procscan.py  registry.py  statusline.py  transcript.py
src/fleet/adapters/: __init__.py  claude_code.py  claude_process.py
src/fleet/macos/: __init__.py  axapp.py  axread.py  osint.py
tests/: preview.py  smoketest.py  test_answer.py  test_appkeys.py  test_channels.py  test_discovery.py  test_framework.py  test_lifecycle.py  test_osint.py  test_sessions.py  test_visual.py
