[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cockpit"
version = "0.3.0"
description = "A physical control surface for AI coding-agent sessions, on a Stream Deck"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Grant Fowler" }]
keywords = ["stream deck", "elgato", "claude code", "control surface", "macos"]

# Three packages, and the split is deliberate rather than incidental:
#   deck    — use-case-agnostic device layer. Knows nothing about Claude,
#             terminals, or sessions. Shareable on its own.
#   fleet   — observe and control the agent-CLI sessions on this machine.
#             Knows nothing about Stream Decks. Shareable on its own.
#   cockpit — the glue: wires one to the other, and nothing else belongs here.
# Keeping them siblings is what stops agent-specific logic leaking into the
# device layer (or pixels leaking into the session layer); the dependency only
# ever runs cockpit -> {deck, fleet}, never between the two libraries or
# backwards. See docs/architecture.md and docs/reference/session-library.md.
dependencies = [
    "streamdeck==0.9.8",
    "pillow>=12,<13",
    # AXStringForRange — reading a terminal's visible text. AppleScript cannot
    # call parameterized Accessibility attributes at all, so this is not
    # optional for answering prompts (docs/prompts.md).
    "pyobjc-framework-ApplicationServices>=10",
]

[project.scripts]
cockpit-daemon = "cockpit.daemon:main"
cockpit-doctor = "cockpit.doctor:main"
cockpit-wire = "cockpit.claude_config:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["deck*", "fleet*", "cockpit*"]

[tool.setuptools.package-data]
"*" = ["*.md"]
